fixed spacing

--- a/clubgame.css
+++ b/clubgame.css
@@ -34,7 +34,7 @@
     height: 100vh;
     height: calc(100vh - 20px);
     max-height: 815px;
-    min-height: 600px;
+    /* min-height: 600px; */
     width: 100%;
     max-width: 400px;
     margin: 0 auto;
@@ -49,7 +49,7 @@ h1 {
 }
 
 h2 {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     line-height: 110%;
 }
 
@@ -87,7 +87,7 @@ h2 {
     bottom: 0;
     right: 0;
     background: red;
-    padding: 15px 15px 5px;
+    padding: 12px 13px 4px;
 }
 
 /* CLUB ITEM POSITIONING */
@@ -103,9 +103,8 @@ h2 {
 .room {
     position: relative;
     width: 100%;
-    height: 50%;
-    margin: 0 auto;
-    padding-top: 50px;
+    height: 55%;
+    margin: 25px auto 0;
 }
 
 .table {
@@ -122,6 +121,7 @@ h2 {
 
 .bottle {
     display: none;
+    z-index: 3;
     top: -15%;
     left: 35%;
     width: 80px;
